Some little JAX-RS changes